Cleaned up code and overflow issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,7 @@ body {
 .wrapper {
 	margin: 0 auto;
 	width: 1130px;
+	overflow: hidden;
 	/*background-color: rgb(233, 225, 218);*/
 }
 
@@ -235,14 +236,12 @@ h2 {
 *****/
 
 footer {
+	float: left;
+	width: 40%;
+	margin: 20px auto;
 	font-family: helvetica, sans-serif;
 	font-size: 12px;
 	letter-spacing: .7px;
-	float: left;
-	width: 100%;
-	margin-top: 20px;
-	margin-left: 400px;
-	margin-bottom: 20px; 
 }
 
 /*****
